[gd_scene load_steps=12 format=3 uid="uid://ded1pyb46k1ft"]

[ext_resource type="Script" path="res://effects/fireball.gd" id="1_c8agk"]
[ext_resource type="Texture2D" uid="uid://cc7dixmxw1f5k" path="res://effects/toppng.com-fireball-sprite-png-fireball-sprite-sheet-1161x305.png" id="2_jltdv"]
[ext_resource type="Texture2D" uid="uid://bl38w2omifkeu" path="res://effects/toppng.com-fireball-png-748x732.png" id="3_yw56w"]
[ext_resource type="AudioStream" uid="uid://cpqvwhb65j4ao" path="res://sounds/explosion.wav" id="4_ajwoh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2f6xe"]
atlas = ExtResource("2_jltdv")
region = Rect2(0, 0, 417, 109)

[sub_resource type="AtlasTexture" id="AtlasTexture_egrj4"]
atlas = ExtResource("2_jltdv")
region = Rect2(417, 0, 417, 109)

[sub_resource type="AtlasTexture" id="AtlasTexture_qrbhs"]
atlas = ExtResource("2_jltdv")
region = Rect2(0, 109, 417, 109)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vj0x"]
atlas = ExtResource("2_jltdv")
region = Rect2(417, 109, 417, 109)

[sub_resource type="SpriteFrames" id="SpriteFrames_ylr4m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2f6xe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_egrj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrbhs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vj0x")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jb0qj"]
size = Vector2(312, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_nc48m"]
radius = 362.138

[node name="fireball" type="Node2D"]
rotation = -1.5708
scale = Vector2(0.2, 0.2)
script = ExtResource("1_c8agk")

[node name="comet" type="AnimatedSprite2D" parent="."]
position = Vector2(-113.797, 0.000104458)
rotation = -3.14159
scale = Vector2(0.802381, 1)
sprite_frames = SubResource("SpriteFrames_ylr4m")
frame_progress = 0.739568

[node name="comet_collision" type="Area2D" parent="comet"]
position = Vector2(-155, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="comet/comet_collision"]
position = Vector2(113, 0)
scale = Vector2(1, 3.5)
shape = SubResource("RectangleShape2D_jb0qj")

[node name="fireball" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_yw56w")

[node name="explosion" type="Area2D" parent="fireball"]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="fireball/explosion"]
shape = SubResource("CircleShape2D_nc48m")

[node name="explosion_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ajwoh")

[connection signal="body_entered" from="comet/comet_collision" to="." method="_on_comet_collision_body_entered"]
[connection signal="body_entered" from="fireball/explosion" to="." method="_on_explosion_body_entered"]
